--- a/package.json
+++ b/package.json
@@ -2,26 +2,36 @@
   "name": "um",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
+    "ci": "payload migrate && pnpm build"
   },
   "dependencies": {
+    "@payloadcms/db-vercel-postgres": "^3.17.1",
+    "@payloadcms/next": "^3.17.1",
+    "@payloadcms/richtext-lexical": "^3.17.1",
+    "cross-env": "^7.0.3",
+    "graphql": "^16.10.0",
+    "next": "15.1.5",
+    "payload": "^3.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
