--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@payloadcms/db-vercel-postgres": "^3.17.1",
     "@payloadcms/next": "^3.17.1",
     "@payloadcms/richtext-lexical": "^3.17.1",
+    "@payloadcms/storage-vercel-blob": "^3.17.1",
     "cross-env": "^7.0.3",
     "graphql": "^16.10.0",
     "next": "15.1.5",
