--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@payloadcms/next": "^3.18.0",
     "@payloadcms/richtext-lexical": "^3.18.0",
     "@payloadcms/storage-vercel-blob": "^3.18.0",
+    "axios": "^1.7.9",
     "cross-env": "^7.0.3",
     "graphql": "^16.10.0",
     "next": "15.1.5",
